--- a/config/bspwm/eww/bar/eww.scss
+++ b/config/bspwm/eww/bar/eww.scss
@@ -120,6 +120,8 @@ scale trough {
   margin-bottom: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
   border-radius: 5px;
 }
 
@@ -132,7 +134,8 @@ scale trough {
   margin-bottom: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
-  border-radius: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
   border-radius: 5px;
 }
 
@@ -140,7 +143,7 @@ scale trough {
   font-family: VictorMono Nerd Font;
   font-weight: bold;
   font-size: 1.5em;
-  color: $blue;
+  color: #1793d1;
   padding-top: 15px;
   padding-left: 3.5px;
 }
