add art support for eww music player

--- a/config/bspwm/eww/bar/eww.scss
+++ b/config/bspwm/eww/bar/eww.scss
@@ -1,4 +1,4 @@
-@import 'colors/mocha';
+@import 'colors/decayce';
 
 * {
   all: unset; //Unsets everything so you can style everything from scratch
