--- a/config/bspwm/eww/music-player/eww.scss
+++ b/config/bspwm/eww/music-player/eww.scss
@@ -43,3 +43,9 @@
   font-size: 2em;
   color: $yellow;
 }
+
+.cover_art {
+  background-size: 40% 60%;
+  background-repeat: no-repeat;
+	background-position: center;
+}
