--- a/config/bspwm/eww/music-player/eww.scss
+++ b/config/bspwm/eww/music-player/eww.scss
@@ -45,7 +45,8 @@
 }
 
 .cover_art {
-  background-size: 40% 60%;
+  background-size: 58% 100%;
   background-repeat: no-repeat;
-	background-position: center;
+  background-position: top;
+  // margin-top: 50px;
 }
